# malicious-code-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: main_m1-js-detection.yml
api/: Dockerfile  example.json  main.py  requirements.txt
api/app/base/: config.py  logging.py
api/app/modules/js_detect/: actions.py  routers.py  schemas.py
confs/: input.yaml
lib/codebert/: run.py  train.sh
lib/codebert-bimodal/: model.py  run_classifier.py  train.sh
logs/: predictions_codebert_bimodal.txt
notebooks/: test1.ipynb  test2_cnn.ipynb  test3.ipynb  test4.ipynb  test5.ipynb  test6.ipynb  test6.py  test7.ipynb  test7.py  test_url_dataset_crawl.ipynb
scripts/: build_fasttext_model.py  build_word_vectors.py  count_data.sh  create_train_input.py  csv_to_parquet.py  download_set1.sh  download_set2.sh  gen_tree.sh  inference_codebert_bimodal.sh  inference_codebert_unimodal.sh  preprocess.py  split_train_test.py  split_train_test_from_conf.py  test.py  tokenize_corpus.py  train_codebert_bimodal.sh  train_codebert_unimodal.sh
scripts/crawler/: crawl_kaggle_dataset.py  db_connector.py
scripts/utils/: count_by_dir.sh  crawl_kaggle_dataset.py  jupyter_list.py  move_to_root.py  parquet_to_js.py  text_to_parquet.py  vastai_bootstrap.sh
src/: dataset.py
src/codebert-bimodal/: utils.py
src/codebert-unimodal/: run.py
src/codebert_bimodal/: preprocess.py
src/codebert_unimodal/: model.py  run.py
src/utils/: logging.py
