[tool.poetry]
name = "malicious-code-detection"
version = "0.1.0"
description = ""
authors = ["Truong Hoang <truong173@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "malicious_code_detection"}]

[tool.poetry.dependencies]
python = "~3.10"
slimit = {git = "https://github.com/rspivak/slimit.git", rev = "3533eba9ad5b39f3a015ae6269670022ab310847"}
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
numpy = "^1.25.2"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.1"
gensim = "^4.3.1"
python-dotenv = "^1.0.0"
chardet = "^5.2.0"
mypy = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.284"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E402","F841","F401"]
select = ["E", "F", "I", "W"]
line-length = 120
fixable = ["I"]
include = ["*.py"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true
src = ["src"]

[tool.black]
line-length = 120
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "gensim.*"
]
ignore_errors = true
ignore_missing_imports = true